# global-economic-indicators-dashboard

./: .gitignore  LICENSE  main.py  pyproject.toml
data/Trade/: API_NE.TRD.GNFS.ZS_DS2_en_csv_v2_127190.csv
data/gdp_constant_2015/: API_NY.GDP.MKTP.KD_DS2_en_csv_v2_127117.csv
src/: analysis_utils.py  clean_data.py  data_helpers.py  export_utils.py  load_data.py  plot_gdp.py  plot_stats.py  stats.py
